<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_add"
        android:orderInCategory="100"
        android:title="@string/add"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:title="@string/delete"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_email"
        android:orderInCategory="100"
        android:title="@string/email"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sms"
        android:orderInCategory="100"
        android:title="@string/sms"
        app:showAsAction="never" />
</menu>
