<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_add"
            android:orderInCategory="100"
            android:title="@string/add"
            android:icon="@drawable/ic_action_add" />
        <item
            android:id="@+id/action_delete"
            android:orderInCategory="100"
            android:title="@string/delete"
            android:icon="@drawable/ic_action_delete" />
        <item
            android:id="@+id/action_settings"
            android:orderInCategory="100"
            android:title="@string/settings"
            android:icon="@drawable/ic_action_settings" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/action_email"
                android:orderInCategory="100"
                android:title="@string/email"
                android:icon="@drawable/ic_action_email" />
            <item
                android:id="@+id/action_sms"
                android:orderInCategory="100"
                android:title="@string/sms"
                android:icon="@drawable/ic_action_sms" />
        </menu>
    </item>

</menu>
